deployment.yml
apiVersion: apps/v1
kind: Deployment
spec:
metadata:
  name: mon-application
  template:
    metadata:
      labels:
        app: mon-application
    spec:
      containers:
      - name: app
        image: nginx:latest
        ports:
        - containerPort: 80

  replicas: 3
  selector:
    matchLabels:
      app: mon-application
